--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
     name: ai-web-scraper
-    env: python
-    buildCommand: bash build.sh
-    startCommand: streamlit run main.py --server.port $PORT --server.address 0.0.0.0
+    env: docker
+    plan: free
     envVars:
       - key: PYTHONUNBUFFERED
         value: true
