--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ langchain>=0.0.335
 langchain-ollama>=0.1.0
 langchain-core>=0.1.0
 playwright==1.41.0
-requests
+requests>=2.28.0
+urllib3>=1.26.0
 
 # Removed Selenium dependencies
 # Added Playwright as the primary browser automation tool
+# Added urllib3 for requests retry functionality
